Making sure contact page works with the app running

--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -9,19 +9,17 @@
     <link th:href="@{/login.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/login.js}"></script>
 </head>
-<body>
-
-<div th:class="background-image"></div>
-<style>
-    .background-image {
-        background-image: url("/static/img/bg.png");
-        background-size: contain;
-        background-repeat: no-repeat;
-        text-align: center;
-        width: 200px;
-        height: 200px;
-    }
-</style>
+<!--<div th:class="background-image"></div>-->
+<!--<style>-->
+<!--    .background-image {-->
+<!--        background-image: url("/static/img/bg.png");-->
+<!--        background-size: contain;-->
+<!--        background-repeat: no-repeat;-->
+<!--        text-align: center;-->
+<!--        width: 200px;-->
+<!--        height: 200px;-->
+<!--    }-->
+<!--</style>-->
 <header>
     <div class="nav">
         <ul>
@@ -34,35 +32,49 @@
         </ul>
     </div>
 </header>
+<body>
 <div style="text-align: center;">
     <h1> MEET THE TEAM </h1>
 
-<p>
-    <img src="/static/img/Brock.jpg" alt="Headshot of Brock Jones"  width="170" height="150"/>
-</p><p>
-    Brock Jones: Frontend, Backend, and some Database development
+<div style="padding: 15px;">
+    <img th:src="@{Brock.jpg}" alt="Headshot of Brock Jones"  width="200" height="150"/>
+    <br>
+    Brock Jones: Full stack Developer
+</div>
 
-</p><p>
-    <img src="/static/img/Akram.jpg" alt="Headshot of Akram Moustafa"  width="170" height="150"/>
-</p><p>
-    Akram Moustafa: Frontend and Backend developer
-</p><p>
-    <img src="/static/img/Simdi.JPG" alt="Headshot of Chisimdi Agomoh"  width="170" height="150"/>
-</p><p>
+<div style="padding: 15px;">
+    <img th:src="@{Akram.jpg}" alt="Headshot of Akram Moustafa"  width="200" height="150"/>
+    <br>
+    Akram Moustafa: Frontend and backend developer
+</div>
+
+<div style="padding: 15px;">
+    <img th:src="@{Simdi.JPG}" alt="Headshot of Chisimdi Agomoh"  width="200" height="150"/>
+    <br>
     Chisimdi Agomoh: Backend and database developer
-</p><p>
-    <img src="/static/img/Jovane.jpg" alt="Headshot of Jovane Samuel"  width="170" height="150"/>
-</p><p>
+</div>
+
+<div style="padding: 15px;">
+    <img th:src="@{Jovane.jpg}" alt="Headshot of Jovane Samuel"  width="200" height="150"/>
+    <br>
     Jovane Samuel: Frontend developer
-</p><p>
-    <img src="/static/img/Samuel.jpg" alt="Headshot of Samuel Tabaczynski"  width="170" height="150"/>
-</p><p>
+</div>
+
+<div style="padding: 15px;">
+    <img th:src="@{Samuel.jpg}" alt="Headshot of Samuel Tabaczynski"  width="170" height="150"/>
+    <br>
     Samuel Tabaczynski: Frontend developer
-</p><p>
-    <img src="/static/img/Marcus.JPG" alt="Headshot of Marcus Williams"  width="170" height="150"/>
-</p><p>
+</div>
+
+<div style="padding: 15px;">
+    <img th:src="@{Marcus.JPG}" alt="Headshot of Marcus Williams"  width="200" height="150"/>
+    <br>
     Marcus Williams: Frontend developer
-</p>
+</div>
+
+<div>
+    <a href="https://moust1am.wixsite.com/old-world-auction">Project Website</a>
+</div>
 
 <pre>
 
