Wishlist implementation for manage items page and auction list page

--- a/src/main/resources/static/manageItems.css
+++ b/src/main/resources/static/manageItems.css
@@ -13,3 +13,11 @@ span {
 #userListedItems {
     display: inline-block;
 }
+
+#savedItems {
+    display: inline-block;
+}
+
+#previousBids {
+    display: inline-block;
+}
