--- a/src/main/resources/templates/auctionList.html
+++ b/src/main/resources/templates/auctionList.html
@@ -121,6 +121,7 @@ function saveItem(itemId, currentBid) {
 
 
 </script>
+<script type="text/javascript" th:src="@{/login.js}"></script>
 <body>
 <header>
     <div class="nav">
