--- a/src/main/resources/templates/manageItems.html
+++ b/src/main/resources/templates/manageItems.html
@@ -12,7 +12,7 @@
 <header>
     <div class="nav">
         <ul>
-            <a class="active">Home</a>
+            <a href="/">Home</a>
             <a href="/auctions-page">Auctions</a>
             <a href="/register-page">Register</a>
             <a href="/addItem">Create</a>
@@ -30,9 +30,11 @@
     <div id="userListedItems"></div>
 
     <h3>Your Saved Items</h3>
+    <p>(Click item to view)</p>
     <div id="savedItems"></div>
 
     <h3>Your Previous Bids</h3>
+    <p>(Click item to view)</p>
     <div id="previousBids"></div>
 
 </div>
