--- a/src/main/resources/templates/updateItem.html
+++ b/src/main/resources/templates/updateItem.html
@@ -24,7 +24,7 @@
         </ul>
     </div>
 </header>
-    <h1>Add Auction Item</h1>
+    <h1>Update Auction Item</h1>
     <form id="itemAddForm" action="/updateItem" method="post" enctype="multipart/form-data">
         <input id="userId" type="hidden" name="sellerID"/>
         <input id="itemId" type="hidden" name="itemID"/>
