--- a/src/main/resources/templates/confirmation.html
+++ b/src/main/resources/templates/confirmation.html
@@ -5,8 +5,9 @@
     <title>Confirmation</title>
     <link th:href="@{/styling.css}" rel="stylesheet"/>
     <link th:href="@{/common.css}" rel="stylesheet"/>
+    <link th:href="@{/login.css}" rel="stylesheet"/>
 </head>
-<body>
+<body style="text-align: center;">
 <header>
     <div class="nav">
         <ul>
@@ -16,16 +17,15 @@
             <a href="/login-page">Login</a>
             <a href="/addItem">Create</a>
             <a href="/contact">Contact</a>
-            <span style="float:right; color: white" th:text="${welcome}"></span>
+            <div id="user" class="dropdown" style="float:right; color: white"></div>
         </ul>
     </div>
 </header>
     <h1>You have listed the item!</h1>
     <h2>Item Details:</h2>
-    <p> Name: <strong th:text="${name}"></strong></p>
-    <p> Description: <strong th:text="${description}"></strong></p>
-    <p> Starting Bid: <strong th:text="${currentBid}"></strong></p>
-    <p> Color: <strong th:text="${color}"></strong></p>
-    <p> Manufactured Year: <strong th:text="${manufacturedYear}"></strong></p>
+    <div> Name: <strong th:text="${name}"></strong></div>
+    <div> Description: <strong th:text="${description}"></strong></div>
+    <div> Starting Bid: <strong th:text="${currentBid}"></strong></div>
+<script type="text/javascript" th:src="@{/login.js}"></script>
 </body>
 </html>
