--- a/src/main/resources/templates/getItem.html
+++ b/src/main/resources/templates/getItem.html
@@ -7,6 +7,7 @@
 <link th:href="@{/common.css}" rel="stylesheet"/>
 <link th:href="@{/getItem.css}" rel="stylesheet"/>
 <link th:href="@{/login.css}" rel="stylesheet"/>
+<script type="text/javascript" th:src="@{/login.js}"></script>
 
 <head>
     <meta charset="UTF-8">
@@ -21,6 +22,7 @@
             <a href="/register-page">Register</a>
             <a href="/addItem">Create</a>
             <a href="/contact">Contact</a>
+            <a href="/login-page">Login</a>
             <div id="user" class="dropdown" style="float:right; color: white"></div>
         </ul>
     </div>
@@ -65,9 +67,7 @@
     <script th:inline="javascript">
         /*<![CDATA[*/
         var itemName = /*[[${item.name}]]*/ '';
-        var itemName = /*[[${item.name}]]*/ '';
         var currentBid = /*[[${item.currentBid}]]*/ '';
-        var itemId = /*[[${item.itemID}]]*/ '';
         var auctionStartTimeString = /*[[${item.auctionStartTime}]]*/ '';
         var auctionEndTimeString = /*[[${item.auctionEndTime}]]*/ '';
        var auctionStartTimeFormatted = moment(auctionStartTimeString).format('YYYY-MM-DD');
@@ -132,11 +132,16 @@
         }
         /*]]>*/
     </script>
-    <script type="text/javascript" th:src="@{/login.js}"></script>
+
     <script th:inline="javascript">
         /*<![CDATA[*/
             var currentBidAmount = /*[[${item.currentBid}]]*/;
+            var itemId = /*[[${item.itemID}]]*/;
+            var bidderr = /*[[${item.bidderID}]]*/ '';
         /*]]>*/
+
+
+
      $(document).ready(function() {
          // Function to populate payment methods dropdown
          function populatePaymentMethods(userId) {
@@ -190,13 +195,19 @@
            } else {
              var userId = $('#userId').val();
            var newBidAmount = parseFloat($('#newBidAmountInput').val()); // Convert input to float
-          
+
            console.log('New Bid Amount:', newBidAmount);
            console.log('Current Bid Amount:', currentBidAmount);
                if (newBidAmount <= currentBidAmount) { // Check if new bid amount is lower or equal to current bid amount
                    e.preventDefault(); // Prevent form submission
                    alert('Bid amount must be higher than the current bid amount.'); // Display error message
-               } else {
+               }
+<!--               else if(bidder == $('#userId').val()){-->
+<!--                e.preventDefault(); // Prevent form submission-->
+<!--                   alert('Bid amount must be higher than the current bid amount.'); // Display error message-->
+<!--                }-->
+                else{
+
                    var actionUrl = '/updateBid/' + itemName + '/' + userId + '/' + newBidAmount; // Use newBidAmount input field
                    $('#bidForm').attr('action', actionUrl);
                }
