--- a/src/main/resources/templates/getItem.html
+++ b/src/main/resources/templates/getItem.html
@@ -140,8 +140,6 @@
             var bidderr = /*[[${item.bidderID}]]*/ '';
         /*]]>*/
 
-
-
      $(document).ready(function() {
          // Function to populate payment methods dropdown
          function populatePaymentMethods(userId) {
@@ -222,6 +220,29 @@
             .catch(error => {
                 console.error('Error fetching items:', error);
             });
+            function deleteWishlistItem(itemId) {
+        fetch("/delete-wishlist-item", {
+            method: "DELETE",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify({ itemId: itemId })
+        })
+        .then(response => {
+            if (!response.ok) {
+                throw new Error('Failed to delete wishlist item');
+            }
+
+            return response.json();
+        })
+        .then(data => {
+
+            console.log("Wishlist item deleted successfully");
+        })
+        .catch(error => {
+            console.error('Error deleting wishlist item:', error);
+        });
+    }
        });
      });
     </script>
