--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -57,7 +57,7 @@
 <div style="padding: 15px;">
     <img th:src="@{Jovane.jpg}" alt="Headshot of Jovane Samuel"  width="200" height="150"/>
     <br>
-    Jovane Samuel: Frontend developer
+    Jovane Samuels: Frontend developer
 </div>
 
 <div style="padding: 15px;">
