--- a/src/main/resources/templates/logIn.html
+++ b/src/main/resources/templates/logIn.html
@@ -67,6 +67,8 @@
 <body>
 <div class="login-container">
     <h2>Login to Old World Auction</h2>
+    <a href="/register-page">New User? Register Here</a>
+    <p></p>
     <form action="/login" method="post">
         <div class="form-group">
             <label for="username">Username:</label>
