--- a/src/main/resources/templates/logInErred.html
+++ b/src/main/resources/templates/logInErred.html
@@ -71,6 +71,7 @@
 <body>
 <div class="login-container">
     <h2>Login to Old World Auction</h2>
+    <a href="/register-page">New User? Register Here</a>
     <p>Invalid login. Please try again.</p>
     <form action="/login" method="post">
         <div class="form-group">
