Finished adding comments to all code except css files

--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -1,3 +1,4 @@
+<!-- The add auction item page that the user can use to create and list a new auction item to our auction list -->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
