--- a/src/main/resources/templates/auctionList.html
+++ b/src/main/resources/templates/auctionList.html
@@ -1,3 +1,4 @@
+<!-- The auction list page where the user can browse and see the items listed on the page by category -->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
@@ -7,7 +8,6 @@
     <link href="/common.css" rel="stylesheet"/>
     <link href="/login.css" rel="stylesheet"/>
     <link href="/auctionList.css" rel="stylesheet"/>
-    <!--  <script type="text/javascript" th:src="@{/AuctionList.js}"></script>-->
 
 </head>
 <script>
