--- a/src/main/resources/templates/getItem.html
+++ b/src/main/resources/templates/getItem.html
@@ -1,3 +1,4 @@
+<!-- The get item page that displays a specific item to the user and allows them to place a bid on it if it hasn't ended -->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <script src="https://js.stripe.com/v3/"></script>
