--- a/src/main/resources/templates/logInErred.html
+++ b/src/main/resources/templates/logInErred.html
@@ -1,3 +1,4 @@
+<!-- A copy of the login page that is displayed when the user inputs incorrect login information. Has error information -->
 <!DOCTYPE html>
 <html lang="en">
 
