--- a/src/main/resources/templates/registrationConfirmation.html
+++ b/src/main/resources/templates/registrationConfirmation.html
@@ -1,3 +1,4 @@
+<!-- The registration confirmation page that shows the user they have created an account after they do so -->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
