--- a/src/main/resources/templates/updateBid.html
+++ b/src/main/resources/templates/updateBid.html
@@ -1,3 +1,4 @@
+<!-- Page used to update the bid of an auction item when the user increases the bid amount -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
