--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -1,3 +1,4 @@
+<!-- The account management page that the user can use to update their user information and manage payment methods -->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
