--- a/src/main/resources/templates/manageItems.html
+++ b/src/main/resources/templates/manageItems.html
@@ -1,3 +1,4 @@
+<!-- The manage items page that allows users to view and update/check on their listed, saved, and previous bid items -->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
